kube/02-simple-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app
  namespace: default
  labels:
    app: simple-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: simple-app
