kube/03-simple-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-simple-app
spec:
  rules:
  - host: simple-app.kubernetes.learn-devops.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: simple-app
          servicePort: 80
